# quantumtrade

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  sample-portfolio.csv
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backend/: __init__.py  requirements.txt
backend/app/: config.py  database.py  logging_config.py  main.py  models.py  schemas.py  worker.py
backend/app/middleware/: auth.py
backend/app/routers/: __init__.py  agents.py  alerts.py  (+8 more)
backtesting/: engine.py  metrics.py  walk_forward.py
data_pipeline/: __init__.py  indicators.py  ingestion.py  providers.py  validation.py
docs/: API.md  ARCHITECTURE.md  PRODUCT_UPGRADE.md  PROGRESS.md
frontend/: .env.local.example  .gitignore  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: agent-feed.tsx  agent-orchestration.tsx  ai-chat-panel.tsx  explainability-panel.tsx  live-terminal.tsx  market-chart.tsx  market-command-palette.tsx  market-controls.tsx  market-intelligence.tsx  metric-tile.tsx  news-intelligence.tsx  performance-panel.tsx  portfolio-intelligence.tsx  portfolio-manager.tsx  portfolio-risk-suite.tsx
frontend/lib/: api.ts  config.ts  markets.ts  quant-engine.ts  terminal-data.ts  types.ts
frontend/store/: use-dashboard-store.ts
ml_engine/: meta_agent.py
paper_trading/: engine.py
tests/: conftest.py  test_alerts.py  test_auth.py  test_health.py  test_portfolio.py
(+14 files in other folders)
