[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quantumtrade-ai"
version = "0.3.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "backtesting*", "data_pipeline*", "ml_engine*", "paper_trading*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
